# batch-tracing

./: Cargo.toml  README.md
benches/: trace.rs
crates/batch-tracing-macro/: Cargo.toml
crates/batch-tracing-macro/src/: lib.rs
src/: future.rs  lib.rs
src/collections/: queue.rs
src/local/: acquirer_group.rs  mod.rs  registry.rs  scope_guard.rs  span_guard.rs  span_line.rs  time_convert.rs  trapper.rs
src/report/: mod.rs
src/span/: cycle.rs  mod.rs  span_id.rs  span_queue.rs
src/trace/: acquirer.rs  collector.rs  mod.rs  scope.rs  tracer.rs
