[package]
name = "batch-tracing"
version = "0.0.0"
authors = ["zhongzc <zhongzc_arch@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slab = "0.4.2"
minstant = { git = "https://github.com/zhongzc/minstant.git" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "trace"
harness = false

[profile.release]
debug = true