[package]
name = "batch-tracing"
version = "0.0.0"
authors = ["zhongzc <zhongzc_arch@outlook.com>"]
edition = "2018"

[dependencies]
slab = "0.4.2"
minstant = { git = "https://github.com/zhongzc/minstant.git" }
crossbeam-channel = "0.5"
rustracing_jaeger = "0.5.0"
thrift_codec = "0.1.1"

[dev-dependencies]
criterion = "0.3"
crossbeam-utils = "0.8"

[[bench]]
name = "trace"
harness = false

[profile.release]
debug = true